<resources>
    <string name="app_name">Meetings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_company_meeting">SCHEDULE COMPANY MEETING</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="meeting_date">Meeting Date</string>
</resources>
